# learn-opengl-in-C

./: .gitignore  CMakeLists.txt  build  build.sh  compile_commands.json
include/assimp/: revision.h
shaders/: default.frag  default.vert  light.frag  light.vert
src/: io.c  main.c  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h
